Add default scope support to dsl (#1)
* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c

* c