@@ -32,7 +32,6 @@ dependencies {
 }
 
 tasks.withType(Test::class.java) {
-    jvmArgs = listOf("-XX:MaxPermSize=256m")
     testLogging {
         events.addAll(listOf(TestLogEvent.PASSED, TestLogEvent.FAILED, TestLogEvent.SKIPPED))
         showStandardStreams = true
